2011-02-24  Murray Cumming  <murrayc@murrayc.com>

	Build the examples during make check (and distcheck).

	* Makefile.am: Add examples to the SUBDIRS.
	* examples: Remove the individual Makefile.am files, adding their contents 
	to examples/Makefile.am.
	
	The build of the examples was apparently disabled since we converted the build 
	to use mm-common.

1.90.3:

2011-02-02  Murray Cumming  <murrayc@murrayc.com>

	Correct the use of Glib::ListHandler.

	* goocanvas/src/item.ccg: Fix a compilation error and do not try to 
	remember the temporary value from data().

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Replace use of *ListHandle with std::vector<>, as in gtkmm.

	* goocanvas/src/canvas.hg:
	* goocanvas/src/item.[hg|ccg]: However, the vfunc implemenations here need 
	some attention to make sure that we are not doing awful things with memory.

1.90.2:

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Use Gdk::Cursor via RefPtr.

	* codegen/m4/convert_libgoocanvasmm.m4: Added a conversion.
	* goocanvas/src/canvas.hg: pointer_grab(): Take the Gdk::Cursor as a RefPtr<>,
	as is now necessary with gtkmm 3.

2010-12-16  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the latest gtkmm from git master.

	* configure.ac: Set GMMPROC_EXTRA_M4_DIR to use the gtkmm m4 conversions.

2010-12-03  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the latest gtkmm from git master.

	* goocanvas/src/itemmodelsimple.hg:
	* goocanvas/src/itemsimple.hg:
	* goocanvas/src/text.hg:
	* goocanvas/src/textmodel.hg: Added pangomm includes.

1.9.2:

2010-10-27  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with a (future/patched) goocanvas.

	* goocanvas/src/canvas.hg: Don't wrap the set_scroll_adjustments signal,
	because it was only for internal use by GtkScrolledWindow and will be
	removed from GooCanvas soon.

2010-09-29  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the latest gtkmm 3 API.
