@@ -1,5 +1,0 @@
-include $(top_srcdir)/examples/Makefile.am_fragment
-
-noinst_PROGRAMS = test
-test_SOURCES = main.cc
-
